--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -4,12 +4,12 @@
 
     <!-- preloader start -->
 
-    <div id="ht-preloader">
+    <!-- <div id="ht-preloader">
       <div class="loader clear-loader">
         <span></span>
         <p>Aladdin Company Profile</p>
       </div>
-    </div>
+    </div> -->
 
     <!-- preloader end -->
 
