add annimation in services component

--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -215,7 +215,7 @@
           </button>
         </div>
         <div class="modal-body">
-          
+          <h1>Product Title</h1>
           <p>More Info About This Product, contact our  <a href="/contact">admin</a></p>
         </div>
         <div class="modal-footer">
