--- a/src/app/pages/services/data-center/data-center.component.html
+++ b/src/app/pages/services/data-center/data-center.component.html
@@ -22,7 +22,7 @@
 
 
 <section class="mt-0 py-0">
-  <div class="container">
+  <div class="container wow animate__animated animate__fadeInUp">
     <div class="row">
       <div class="col-12">
         <div class="card border-0 bg-transparent">
@@ -38,7 +38,7 @@
 
 <section class="pt-2">
   <div class="container">
-    <div class="row justify-content-center text-center">
+    <div class="row justify-content-center text-center wow animate__animated animate__fadeInUp">
       <div class="col-12 col-md-12 col-lg-8 mb-8">
         <div>
           <h2 class="mt-3">Data Center Infrastruktur and Services</h2>
@@ -48,7 +48,7 @@
       </div>
     </div>
     <div class="row align-items-center">
-      <div class="col-lg-4 col-12 text-lg-right">
+      <div class="col-lg-4 col-12 text-lg-right wow animate__animated animate__fadeInLeft">
         <div class="d-flex align-items-start mb-8 mt-0">
           <div class="order-lg-1 ml-lg-3">
             <div class="f-icon-shape-sm text-white bg-yellow rounded-circle shadow-primary mr-3 mr-lg-0"> <i class="la la-network-wired
@@ -83,7 +83,7 @@
       <div class="col-lg-4 col-12 my-5 my-lg-0">
         <img src="../assets/images/svg/01.svg" alt="Image" class="img-fluid">
       </div>
-      <div class="col-lg-4 col-12">
+      <div class="col-lg-4 col-12 wow animate__animated animate__fadeInRight">
         <div class="d-flex align-items-start mb-6 mt-5">
           <div>
             <div class="f-icon-shape-sm text-white bg-yellow rounded-circle shadow-primary mr-3"> <i class="la la-eye ic-2x"></i>
