--- a/src/app/pages/services/network/network.component.html
+++ b/src/app/pages/services/network/network.component.html
@@ -23,7 +23,7 @@
   
   
   <section class="mt-0 py-0">
-    <div class="container">
+    <div class="container wow animate__animated animate__fadeInUp">
       <div class="row">
         <div class="col-12">
           <div class="card border-0 bg-transparent">
@@ -39,7 +39,7 @@
   
   <section class="pt-2">
     <div class="container">
-      <div class="row justify-content-center text-center">
+      <div class="row justify-content-center text-center wow animate__animated animate__fadeInUp">
         <div class="col-12 col-md-12 col-lg-8 mb-8">
           <div>
             <h2 class="mt-3">Network Product & Services</h2>
@@ -49,7 +49,7 @@
         </div>
       </div>
       <div class="row align-items-center">
-        <div class="col-lg-4 col-12 text-lg-right">
+        <div class="col-lg-4 col-12 text-lg-right wow animate__animated animate__fadeInLeft">
           <div class="d-flex align-items-start mb-8 mt-0">
             <div class="order-lg-1 ml-lg-3">
               <div class="f-icon-shape-sm text-white bg-yellow rounded-circle shadow-primary mr-3 mr-lg-0"> <i class="la la-network-wired
@@ -76,7 +76,7 @@
           </div>
           
         </div>
-        <div class="col-lg-4 col-12 my-5 my-lg-0">
+        <div class="col-lg-4 col-12 my-5 my-lg-0 wow animate__animated animate__fadeInRight">
           <img src="../assets/images/svg/01.svg" alt="Image" class="img-fluid">
         </div>
         <div class="col-lg-4 col-12">
