change network services animation

--- a/src/app/pages/services/network/network.component.html
+++ b/src/app/pages/services/network/network.component.html
@@ -76,10 +76,10 @@
           </div>
           
         </div>
-        <div class="col-lg-4 col-12 my-5 my-lg-0 wow animate__animated animate__fadeInRight">
+        <div class="col-lg-4 col-12 my-5 my-lg-0 ">
           <img src="../assets/images/svg/01.svg" alt="Image" class="img-fluid">
         </div>
-        <div class="col-lg-4 col-12">
+        <div class="col-lg-4 col-12 wow animate__animated animate__fadeInRight">
           <div class="d-flex align-items-start mb-6 mt-10">
             <div>
               <div class="f-icon-shape-sm text-white bg-yellow rounded-circle shadow-primary mr-3"> <i class="la la-eye ic-2x"></i>
